--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==41.0.7
+Deprecated==1.2.14
+idna==3.6
+mixpanel==4.10.0
+psutil==5.9.6
+pycparser==2.21
+PyGithub==2.1.1
+PyJWT==2.8.0
+PyNaCl==1.5.0
 pyobjc-core==10.0
 pyobjc-framework-Cocoa==10.0
+python-dateutil==2.8.2
+requests==2.31.0
 rumps==0.4.0
-psutil
-mixpanel
+sentry-sdk==1.38.0
+six==1.16.0
+typing_extensions==4.8.0
+urllib3==2.1.0
+wrapt==1.16.0
