--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -39,20 +39,21 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        echo $MIXPANEL_TOKEN
+        python -m pip install --upgrade pip        
         pip install py2app
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       if: matrix.os == 'macos' || matrix.os == 'self-hosted'
 
     - name: Generate app for intel architecture
       run: |
+          export MIXPANEL_TOKEN=${{ env.MIXPANEL_TOKEN }}
           python setup.py py2app
           mv dist dist-intel
       if: matrix.os == 'macos' && matrix.arch == 'X64'
 
     - name: Generate app for arm64 architecture
       run: |
+        export MIXPANEL_TOKEN=${{ env.MIXPANEL_TOKEN }}
         python setup.py py2app
         mv dist dist-arm64
       if: matrix.os == 'self-hosted' && matrix.arch == 'ARM64'
