Update: README and GH actions
Signed-off-by: NaveenKumar Namachivayam <catch.nkn@gmail.com>

--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -5,7 +5,7 @@ name: Hamster
 
 on:
   push:
-    branches: [ "feature/telemetry" ]
+    branches: [ "main" ]
     paths-ignore:
       - '**/**.md'
 
