--- a/hamster/.hamster_app.properties
+++ b/hamster/.hamster_app.properties
@@ -1,5 +1,5 @@
 [JMETER]
-home = /Users/naveenkumar/Tools/apache-jmeter-5.6.1
+home = /Users/naveenkumar/Tools/apache-jmeter-5.6.2
 
 [TELEMETRY]
-enabled = false
+enabled = true
