First Pro feature
Signed-off-by: NaveenKumar Namachivayam <catch.nkn@gmail.com>

--- a/hamster/.hamster_app.properties
+++ b/hamster/.hamster_app.properties
@@ -1,5 +1,8 @@
 [JMETER]
 home = /Users/naveenkumar/Tools/apache-jmeter-5.6.2
+q = /Users/naveenkumar/Tools/apache-jmeter-5.6.2/bin/user.properties
 
 [TELEMETRY]
 enabled = true
+
+
